// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component Initial state Should render Error message 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <AccountsPage>
    <ForwardRef(IonPage)>
      <IonPage
        forwardedRef={null}
      >
        <div
          className="ion-page"
        >
          <SimpleHeader
            goBack={false}
            title="My Accounts"
          >
            <ForwardRef(IonHeader)>
              <IonHeader
                forwardedRef={null}
              >
                <ion-header>
                  <ForwardRef(IonToolbar)
                    color="scotia-red"
                  >
                    <IonToolbar
                      color="scotia-red"
                      forwardedRef={null}
                    >
                      <ion-toolbar
                        color="scotia-red"
                      >
                        <ForwardRef(IonGrid)>
                          <IonGrid
                            forwardedRef={null}
                          >
                            <ion-grid>
                              <ForwardRef(IonRow)
                                className="ion-justify-content-between"
                              >
                                <IonRow
                                  className="ion-justify-content-between"
                                  forwardedRef={null}
                                >
                                  <ion-row>
                                    <ForwardRef(IonLabel)>
                                      <IonLabel
                                        forwardedRef={null}
                                      >
                                        <ion-label>
                                          My Accounts
                                        </ion-label>
                                      </IonLabel>
                                    </ForwardRef(IonLabel)>
                                    <ForwardRef(IonButton)
                                      className="logout-button"
                                      color="light"
                                      fill="outline"
                                      onClick={[Function]}
                                      shape="round"
                                      size="small"
                                    >
                                      <IonButton
                                        className="logout-button"
                                        color="light"
                                        fill="outline"
                                        forwardedRef={null}
                                        onClick={[Function]}
                                        shape="round"
                                        size="small"
                                      >
                                        <ion-button
                                          color="light"
                                          fill="outline"
                                          onClick={[Function]}
                                          shape="round"
                                          size="small"
                                        >
                                          Logout
                                        </ion-button>
                                      </IonButton>
                                    </ForwardRef(IonButton)>
                                  </ion-row>
                                </IonRow>
                              </ForwardRef(IonRow)>
                            </ion-grid>
                          </IonGrid>
                        </ForwardRef(IonGrid)>
                      </ion-toolbar>
                    </IonToolbar>
                  </ForwardRef(IonToolbar)>
                </ion-header>
              </IonHeader>
            </ForwardRef(IonHeader)>
          </SimpleHeader>
          <ForwardRef(IonContent)>
            <IonContent
              forwardedRef={null}
            >
              <ion-content>
                <ForwardRef(IonLabel)>
                  <IonLabel
                    forwardedRef={null}
                  >
                    <ion-label>
                      You dont have accounts
                    </ion-label>
                  </IonLabel>
                </ForwardRef(IonLabel)>
                <ForwardRef(IonLabel)>
                  <IonLabel
                    forwardedRef={null}
                  >
                    <ion-label>
                      There was a error Testing
                    </ion-label>
                  </IonLabel>
                </ForwardRef(IonLabel)>
                <ForwardRef
                  isOpen={false}
                  message="fetching your accounts..."
                >
                  <IonLoading
                    forwardedRef={null}
                    isOpen={false}
                    message="fetching your accounts..."
                  />
                </ForwardRef>
              </ion-content>
            </IonContent>
          </ForwardRef(IonContent)>
        </div>
      </IonPage>
    </ForwardRef(IonPage)>
  </AccountsPage>
</Provider>
`;

exports[`Login component Initial state Should render No accounts 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <AccountsPage>
    <ForwardRef(IonPage)>
      <IonPage
        forwardedRef={null}
      >
        <div
          className="ion-page"
        >
          <SimpleHeader
            goBack={false}
            title="My Accounts"
          >
            <ForwardRef(IonHeader)>
              <IonHeader
                forwardedRef={null}
              >
                <ion-header>
                  <ForwardRef(IonToolbar)
                    color="scotia-red"
                  >
                    <IonToolbar
                      color="scotia-red"
                      forwardedRef={null}
                    >
                      <ion-toolbar
                        color="scotia-red"
                      >
                        <ForwardRef(IonGrid)>
                          <IonGrid
                            forwardedRef={null}
                          >
                            <ion-grid>
                              <ForwardRef(IonRow)
                                className="ion-justify-content-between"
                              >
                                <IonRow
                                  className="ion-justify-content-between"
                                  forwardedRef={null}
                                >
                                  <ion-row>
                                    <ForwardRef(IonLabel)>
                                      <IonLabel
                                        forwardedRef={null}
                                      >
                                        <ion-label>
                                          My Accounts
                                        </ion-label>
                                      </IonLabel>
                                    </ForwardRef(IonLabel)>
                                    <ForwardRef(IonButton)
                                      className="logout-button"
                                      color="light"
                                      fill="outline"
                                      onClick={[Function]}
                                      shape="round"
                                      size="small"
                                    >
                                      <IonButton
                                        className="logout-button"
                                        color="light"
                                        fill="outline"
                                        forwardedRef={null}
                                        onClick={[Function]}
                                        shape="round"
                                        size="small"
                                      >
                                        <ion-button
                                          color="light"
                                          fill="outline"
                                          onClick={[Function]}
                                          shape="round"
                                          size="small"
                                        >
                                          Logout
                                        </ion-button>
                                      </IonButton>
                                    </ForwardRef(IonButton)>
                                  </ion-row>
                                </IonRow>
                              </ForwardRef(IonRow)>
                            </ion-grid>
                          </IonGrid>
                        </ForwardRef(IonGrid)>
                      </ion-toolbar>
                    </IonToolbar>
                  </ForwardRef(IonToolbar)>
                </ion-header>
              </IonHeader>
            </ForwardRef(IonHeader)>
          </SimpleHeader>
          <ForwardRef(IonContent)>
            <IonContent
              forwardedRef={null}
            >
              <ion-content>
                <ForwardRef(IonLabel)>
                  <IonLabel
                    forwardedRef={null}
                  >
                    <ion-label>
                      You dont have accounts
                    </ion-label>
                  </IonLabel>
                </ForwardRef(IonLabel)>
                <ForwardRef
                  isOpen={false}
                  message="fetching your accounts..."
                >
                  <IonLoading
                    forwardedRef={null}
                    isOpen={false}
                    message="fetching your accounts..."
                  />
                </ForwardRef>
              </ion-content>
            </IonContent>
          </ForwardRef(IonContent)>
        </div>
      </IonPage>
    </ForwardRef(IonPage)>
  </AccountsPage>
</Provider>
`;
